lattice.py modify

--- a/try.ipynb
+++ b/try.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +118,14 @@
     "  \n",
     "  \n",
     "  atoms_list = [AseAtomsAdaptor().get_atoms(struct) for struct in structures]\n",
-    "  # return view(atoms_list[0], viewer='ngl'), atoms_list\n",
-    "  # return XYZ, A\n",
-    "  return structures"
+    "  return view(atoms_list[0], viewer='ngl')\n",
+    "  return XYZ, A\n",
+    "  # return structures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +133,20 @@
      "output_type": "stream",
      "text": [
       "Generating with spacegroup=80, elements=C, temperature=0.5\n",
-      "executation time: 3.361391067504883\n"
+      "executation time: 0.002560853958129883\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a0b1f3d0e454a40b66b80743b644579",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -146,12 +158,13 @@
     "seed = 42          # 随机种子\n",
     "\n",
     "# =============== generate and visualization =================\n",
-    "structures = generate_and_visualize(spacegroup, elements, temperature, seed)"
+    "generate_and_visualize(spacegroup, elements, temperature, seed)\n",
+    "# structures = generate_and_visualize(spacegroup, elements, temperature, seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,37 +172,37 @@
       "text/plain": [
        "[Structure Summary\n",
        " Lattice\n",
-       "     abc : 1.9728497519367452 1.9728497519367452 0.20471603525873136\n",
+       "     abc : 1.9728497519367452 1.9728497519367452 1.9728497519367452\n",
        "  angles : 90.0 90.0 90.0\n",
-       "  volume : 0.7967826800289268\n",
+       "  volume : 7.678599825635881\n",
        "       A : -1.9728497519367452 0.0 -1.2080220669539923e-16\n",
        "       B : 1.2080220669539923e-16 -1.9728497519367452 -1.2080220669539923e-16\n",
-       "       C : 0.0 0.0 -0.20471603525873136\n",
+       "       C : 0.0 0.0 -1.9728497519367452\n",
        "     pbc : True True True\n",
-       " PeriodicSite: C (-1.611, 0.0, -0.1039) [0.8164, 0.0, 0.5073]\n",
-       " PeriodicSite: C (9.863e-17, -1.611, -0.1039) [0.0, 0.8164, 0.5073]\n",
-       " PeriodicSite: C (-0.3621, -0.3621, -0.1039) [0.1836, 0.1836, 0.5073]\n",
-       " PeriodicSite: C (-0.3621, 0.0, -0.1039) [0.1836, 0.0, 0.5073]\n",
-       " PeriodicSite: C (2.217e-17, -0.3621, -0.1039) [0.0, 0.1836, 0.5073]\n",
-       " PeriodicSite: C (-1.611, -1.611, -0.1039) [0.8164, 0.8164, 0.5073]\n",
-       " PeriodicSite: C (9.863e-17, -1.611, -0.1009) [0.0, 0.8164, 0.4927]\n",
-       " PeriodicSite: C (-1.611, 0.0, -0.1009) [0.8164, 0.0, 0.4927]\n",
-       " PeriodicSite: C (-0.3621, -0.3621, -0.1009) [0.1836, 0.1836, 0.4927]\n",
-       " PeriodicSite: C (2.217e-17, -0.3621, -0.1009) [0.0, 0.1836, 0.4927]\n",
-       " PeriodicSite: C (-0.3621, 0.0, -0.1009) [0.1836, 0.0, 0.4927]\n",
-       " PeriodicSite: C (-1.611, -1.611, -0.1009) [0.8164, 0.8164, 0.4927]\n",
-       " PeriodicSite: C (-1.023, 0.0, -0.01166) [0.5186, 0.0, 0.05695]\n",
-       " PeriodicSite: C (6.265e-17, -1.023, -0.01166) [0.0, 0.5186, 0.05695]\n",
-       " PeriodicSite: C (-0.9497, -0.9497, -0.01166) [0.4814, 0.4814, 0.05695]\n",
-       " PeriodicSite: C (-0.9497, 0.0, -0.01166) [0.4814, 0.0, 0.05695]\n",
-       " PeriodicSite: C (5.815e-17, -0.9497, -0.01166) [0.0, 0.4814, 0.05695]\n",
-       " PeriodicSite: C (-1.023, -1.023, -0.01166) [0.5186, 0.5186, 0.05695]\n",
-       " PeriodicSite: C (6.265e-17, -1.023, -0.1931) [0.0, 0.5186, 0.9431]\n",
-       " PeriodicSite: C (-1.023, 0.0, -0.1931) [0.5186, 0.0, 0.9431]\n",
-       " PeriodicSite: C (-0.9497, -0.9497, -0.1931) [0.4814, 0.4814, 0.9431]\n",
-       " PeriodicSite: C (5.815e-17, -0.9497, -0.1931) [0.0, 0.4814, 0.9431]\n",
-       " PeriodicSite: C (-0.9497, 0.0, -0.1931) [0.4814, 0.0, 0.9431]\n",
-       " PeriodicSite: C (-1.023, -1.023, -0.1931) [0.5186, 0.5186, 0.9431]\n",
+       " PeriodicSite: C (-1.611, 0.0, -1.001) [0.8164, 0.0, 0.5073]\n",
+       " PeriodicSite: C (9.863e-17, -1.611, -1.001) [0.0, 0.8164, 0.5073]\n",
+       " PeriodicSite: C (-0.3621, -0.3621, -1.001) [0.1836, 0.1836, 0.5073]\n",
+       " PeriodicSite: C (-0.3621, 0.0, -1.001) [0.1836, 0.0, 0.5073]\n",
+       " PeriodicSite: C (2.217e-17, -0.3621, -1.001) [0.0, 0.1836, 0.5073]\n",
+       " PeriodicSite: C (-1.611, -1.611, -1.001) [0.8164, 0.8164, 0.5073]\n",
+       " PeriodicSite: C (9.863e-17, -1.611, -0.972) [0.0, 0.8164, 0.4927]\n",
+       " PeriodicSite: C (-1.611, 0.0, -0.972) [0.8164, 0.0, 0.4927]\n",
+       " PeriodicSite: C (-0.3621, -0.3621, -0.972) [0.1836, 0.1836, 0.4927]\n",
+       " PeriodicSite: C (2.217e-17, -0.3621, -0.972) [0.0, 0.1836, 0.4927]\n",
+       " PeriodicSite: C (-0.3621, 0.0, -0.972) [0.1836, 0.0, 0.4927]\n",
+       " PeriodicSite: C (-1.611, -1.611, -0.972) [0.8164, 0.8164, 0.4927]\n",
+       " PeriodicSite: C (-1.023, 0.0, -0.1123) [0.5186, 0.0, 0.05695]\n",
+       " PeriodicSite: C (6.265e-17, -1.023, -0.1123) [0.0, 0.5186, 0.05695]\n",
+       " PeriodicSite: C (-0.9497, -0.9497, -0.1123) [0.4814, 0.4814, 0.05695]\n",
+       " PeriodicSite: C (-0.9497, 0.0, -0.1123) [0.4814, 0.0, 0.05695]\n",
+       " PeriodicSite: C (5.815e-17, -0.9497, -0.1123) [0.0, 0.4814, 0.05695]\n",
+       " PeriodicSite: C (-1.023, -1.023, -0.1123) [0.5186, 0.5186, 0.05695]\n",
+       " PeriodicSite: C (6.265e-17, -1.023, -1.861) [0.0, 0.5186, 0.9431]\n",
+       " PeriodicSite: C (-1.023, 0.0, -1.861) [0.5186, 0.0, 0.9431]\n",
+       " PeriodicSite: C (-0.9497, -0.9497, -1.861) [0.4814, 0.4814, 0.9431]\n",
+       " PeriodicSite: C (5.815e-17, -0.9497, -1.861) [0.0, 0.4814, 0.9431]\n",
+       " PeriodicSite: C (-0.9497, 0.0, -1.861) [0.4814, 0.0, 0.9431]\n",
+       " PeriodicSite: C (-1.023, -1.023, -1.861) [0.5186, 0.5186, 0.9431]\n",
        " PeriodicSite: C (-1.47, -0.7232, -1.343e-16) [0.7449, 0.3666, 0.0]\n",
        " PeriodicSite: C (-1.25, -0.7465, -1.222e-16) [0.6334, 0.3784, 0.0]\n",
        " PeriodicSite: C (-1.226, -0.5032, -1.059e-16) [0.6216, 0.2551, 0.0]\n",
@@ -204,7 +217,7 @@
        " PeriodicSite: C (-1.47, -0.7465, -1.357e-16) [0.7449, 0.3784, 0.0]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +237,7 @@
        "pymatgen.core.structure.Structure"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +292,7 @@
        "       [0.74494652, 0.37838805, 0.        ]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
