--- a/try.ipynb
+++ b/try.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +110,7 @@
     "  A = np.array(A)\n",
     "  W = np.array(W)\n",
     "  L = np.array(L)\n",
+    "  print(W, L)\n",
     "  \n",
     "  G = np.array([spacegroup for i in range(len(L))])\n",
     "  \n",
@@ -119,40 +120,45 @@
     "  \n",
     "  atoms_list = [AseAtomsAdaptor().get_atoms(struct) for struct in structures]\n",
     "  return view(atoms_list[0], viewer='ngl')\n",
-    "  return XYZ, A\n",
+    "  # return \n",
     "  # return structures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating with spacegroup=80, elements=C, temperature=0.5\n",
-      "executation time: 0.002560853958129883\n"
+      "Generating with spacegroup=70, elements=C, temperature=0.5\n",
+      "executation time: 0.015363216400146484\n",
+      "[[3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]] [[-8.38335365e-01 -8.38335365e-01 -6.07996439e-02  9.00000000e+01\n",
+      "   9.00000000e+01  1.20000000e+02]]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a0b1f3d0e454a40b66b80743b644579",
+       "model_id": "dcdd61af33a14add83389c8f0d2c0b6c",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": []
+      "text/plain": [
+       "HBox(children=(NGLWidget(), VBox(children=(Dropdown(description='Show', options=('All', 'C'), value='All'), Dr…"
+      ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "# ============= params to control the generation =============\n",
-    "spacegroup = 80   # 设置生成的晶体的空间群，范围为1-230\n",
+    "spacegroup = 70   # 设置生成的晶体的空间群，范围为1-230\n",
     "elements = \"C\"      # 限制生成晶体所包含的元素种类，每个元素需要用空格隔开，比如 \"Ba Ti O\"\n",
     "temperature = 0.5  # 控制transformer生成的温度，温度越高生成的novelty越高，推荐值为 0.5到1.5\n",
     "seed = 42          # 随机种子\n",
@@ -165,7 +171,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
