--- a/try.ipynb
+++ b/try.ipynb
@@ -355,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "crystalformer",
    "language": "python",
    "name": "python3"
   },
